# BalancedTrees

./: .clang-format  .clang-tidy  AVLTree.cpp  AVLTree.h  CMakeLists.txt  IBinarySearchTree.cpp  IBinarySearchTree.h  README.md  main.cpp
src/: binary_search_tree.h  json_serializer.hpp  main.cpp  tree_service.cpp  tree_service.h  tree_visitor.h
src/benchmark/: benchmark.cpp
src/trees/: avl_tree.hpp  bb_alpha_tree.hpp  red_black_tree.hpp  scapegoat_tree.hpp  splay_tree.hpp
static/: index.html  script.js  styles.css
